[gd_scene load_steps=2 format=3 uid="uid://dv436mvk8dnv5"]

[ext_resource type="Script" uid="uid://jdein3rkfihk" path="res://Main.gd" id="1_glv2v"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_glv2v")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.050980393, 0.050980393, 0.050980393, 1)

[node name="MainContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StatusLabel" type="Label" parent="MainContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 2
text = "Turno: Jugador 1"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="MainContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
text = "J1: 0 | J2: 0"
horizontal_alignment = 1

[node name="Grid" type="GridContainer" parent="MainContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 400)
layout_mode = 2
size_flags_vertical = 3
columns = 4

[node name="RestartButton" type="Button" parent="MainContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Reiniciar"
